--- a/domain.yml
+++ b/domain.yml
@@ -9,6 +9,9 @@ intents:
   - mood_unhappy
   - bot_challenge
 
+actions:
+  - action_respond_to_api
+
 responses:
   utter_greet:
   - text: "Hey! How are you?"
